# seedlingclassification

./: main.py  pyproject.toml
api/: main.py
models/: classes.pkl
notebooks/: training.ipynb
src/: predict.py  preprocessing.py
streamlit_app/: app.py
